Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  type: NodePort
  selector:
    run: sampleapp
  ports:
  - port: 80
    targetPort: 80
